--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -33,7 +33,7 @@ ENV NODE_ENV=production
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:3010 || exit 1
+    CMD curl -f http://0.0.0.0:3010 || exit 1
 
 # Run the application
 CMD ["serve", "-s", "/app/build", "-l", "3010"]
