--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - NODE_ENV=production
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3010"]
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:3010"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -44,7 +44,7 @@ services:
       - ./backend/static:/app/static
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8310/api/health"]
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8310/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -53,20 +53,6 @@ services:
       - "com.docker.compose.project=satish-portfolio-react"
       - "description=FastAPI Backend for Interactive AI Portfolio"
 
-  # Optional: Add a reverse proxy for production
-  # nginx:
-  #   image: nginx:alpine
-  #   container_name: satish-portfolio-proxy
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #     - ./ssl:/etc/nginx/ssl
-  #   depends_on:
-  #     - frontend
-  #     - backend
-  #   restart: unless-stopped
 
 volumes:
   logs:
